[gd_scene load_steps=3 format=2]

[ext_resource path="res://panels/DataSrcLabel.gd" type="Script" id=1]
[ext_resource path="res://panels/LabelDialog.tscn" type="PackedScene" id=2]

[node name="DataSrcLabel" type="Label"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 0
text = "00"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InvalidNumber" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 58.0
window_title = "Invalid Number"
dialog_text = "Please enter a valid integer"

[node name="Edit" parent="." instance=ExtResource( 2 )]
window_title = "Enter Integer Value -128 ... 255"
[connection signal="gui_input" from="." to="." method="_on_DataSrcLabel_gui_input"]
[connection signal="updated" from="Edit" to="." method="_on_LabelDialog_updated"]
